BatteryBar: add separate option for charging animation color [2/2]
Signed-off-by: AnkitGourav <Ankitgourav035@gmail.com>

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -1069,4 +1069,5 @@
     <string name="sb_battery_bar_gradient_color_summary">Use gradient color as a scale for the battery level</string>
     <string name="sb_battery_bar_high_color">High level color</string>
     <string name="sb_battery_bar_low_color">Low level color"</string>
+    <string name="sb_battery_bar_animate_color">Charging animation color</string>
 </resources>
