Add 3 mode display cutout handler
Signed-off-by: AnkitGourav <Ankitgourav035@gmail.com>

--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -1125,4 +1125,13 @@
     <string name="adaptive_playback_timeout_2_min">2 minutes</string>
     <string name="adaptive_playback_timeout_5_min">5 minutes</string>
     <string name="adaptive_playback_timeout_10_min">10 minutes</string>
+
+    <!-- Display cutout -->
+    <string name="cutout_category_title">Display Cutout</string>
+    <string name="display_cutout_mode_title">Cutout mode</string>
+    <string name="display_cutout_mode_normal">Normal</string>
+    <string name="display_cutout_mode_immerse">Immerse</string>
+    <string name="display_cutout_mode_hide">Hide</string>
+    <string name="stock_statusbar_in_hide">Stock status bar height</string>
+    <string name="stock_statusbar_in_hide_summary">Use default status bar height in Hide mode</string>
 </resources>
