--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -1097,14 +1097,13 @@
     <!-- Long swipe gestures -->
     <string name="left_swipe_key_title">Left swipe</string>
     <string name="right_swipe_key_title">Right swipe</string>
-    <string name="back_swipe_type_title">Long swipe type</string>
-    <string name="back_swipe_type_long">Swipe and hold</string>
-    <string name="back_swipe_type_extended">Swipe edge to edge</string>
+    <string name="back_swipe_type_title">Double back arrow</string>
+    <string name="back_swipe_type_summary">Show double back arrows for long swipe</string>
     <string name="long_back_swipe_timeout_title">Long swipe timeout</string>
-    <string name="left_swipe_actions_title">Long left swipe action</string>
-    <string name="left_swipe_app_action_title">Select long left swipe app</string>
-    <string name="right_swipe_actions_title">Long right swipe action</string>
-    <string name="right_swipe_app_action_title">Select long right swipe app</string>
+    <string name="long_swipe_actions_title">Long swipe action</string>
+    <string name="long_swipe_app_action_title">Select long swipe app</string>
+    <string name="hold_swipe_actions_title">Swipe and hold action</string>
+    <string name="hold_swipe_app_action_title">Select swipe and hold app</string>
     <string name="back_swipe_app_select_summary">Select an app to launch with the back gesture</string>
     <string name="gesture_nav_tweaks_footer_info">To choose a specific app activity for the action, long press on any app in the app picker</string>
 
