--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -1133,4 +1133,5 @@
 
     <!-- Translucent lockscreen notifications background -->
     <string name="translucent_lockscreen_notifications_bg_title">Translucent notifications background</string>
+    <string name="translucent_lockscreen_notifications_bg_summary">Show translucent notifications background on lockscreen</string>
 </resources>
