--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -1137,6 +1137,9 @@
     <string name="translucent_lockscreen_notifications_bg_title">Translucent notifications background</string>
     <string name="translucent_lockscreen_notifications_bg_summary">Show translucent notifications background on lockscreen</string>
 
-    <string name="qs_datausage_title">Show data usage in qs header</string>
-    <string name="qs_datausage_subtitle">Shows data usage in quick settings header of sim used for data</string>
+    <!-- QS Header data uasge -->
+    <string name="qs_datausage_title">Data usage in QS Header</string>
+    <string name="qs_datausage_disabled">Disabled</string>
+    <string name="qs_datausage_daily">Daily usage</string>
+    <string name="qs_datausage_monthly">Monthly usage</string>
 </resources>
