--- a/res/xml/ion_settings_quicksettings.xml
+++ b/res/xml/ion_settings_quicksettings.xml
@@ -98,11 +98,12 @@
             android:defaultValue="0"
             android:summary="%s" />
 
-        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+        <com.ion.ionizer.preferences.SystemSettingListPreference
             android:key="qs_datausage"
             android:title="@string/qs_datausage_title"
-            android:summary="@string/qs_datausage_subtitle"
-            android:defaultValue="false" />
+            android:entries="@array/qs_datausage_entries"
+            android:entryValues="@array/qs_datausage_values"
+            android:defaultValue="0" />
 
         <PreferenceScreen
             android:layout="@layout/ion_divider"
