--- a/res/xml/ion_settings_about.xml
+++ b/res/xml/ion_settings_about.xml
@@ -128,7 +128,7 @@
             android:icon="@drawable/ion_support"/>
 
         <Preference
-            android:title="Moonish"
+            android:title="Neptunian"
             android:summary="@string/ion_support_summary"
             android:icon="@drawable/ion_support"/>
 
