QSBlur: disable by default [2/2]
Signed-off-by: AnkitGourav <Ankitgourav035@gmail.com>

--- a/res/xml/ion_settings_interface.xml
+++ b/res/xml/ion_settings_interface.xml
@@ -98,7 +98,7 @@
             android:key="qs_blur"
             android:title="@string/blur_quicksettings_title"
             android:summary="@string/blur_quicksettings_summary"
-            android:defaultValue="true" />
+            android:defaultValue="false" />
 
         <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
             android:key="qs_blur_alpha"
