--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -1238,4 +1238,8 @@
     <string name="slim_recents_enter_exit_animation_title">Animation</string>
     <string name="slim_recents_enter_exit_animation_translate">Translate</string>
     <string name="slim_recents_enter_exit_animation_fade">Fade</string>
+
+    <!-- Show only navbar handle -->
+    <string name="show_only_navbar_handle_title">Show only navigation handle</string>
+    <string name="show_only_navbar_handle_summary">Hide navigation bar and show only handle</string>
 </resources>
